[hui] Fix toolbar pushing elements go out of the view height bounds

--- a/hide_hl/res/ui/style/hui-view.less
+++ b/hide_hl/res/ui/style/hui-view.less
@@ -10,4 +10,13 @@ hui-view {
 	> hui-background {
 		background: @bg-panel-lvl1;
 	}
+
+	> hui-element {
+		auto-size: 1;
+		fill-height: 1;
+	}
+	> hui-toolbar {
+		auto-size: none;
+		fill-height: 0;
+	}
 }
